HFP-1596 Fix alignment of summary icon on navbar

--- a/src/styles/navigation-line.css
+++ b/src/styles/navigation-line.css
@@ -222,6 +222,10 @@
   min-width: 2.2em;
 }
 
+.h5p-course-presentation .h5p-progressbar .h5p-progressbar-part.progressbar-part-summary-slide a {
+  padding-top: 0;
+}
+
 /* The summary slide icon */
 .h5p-course-presentation .h5p-progressbar .h5p-progressbar-part.progressbar-part-summary-slide a:after {
   content: "";
@@ -231,6 +235,8 @@
 
   background: transparent url(../fonts/summary-icon.svg) no-repeat center;
   background-size: 3.4em 1.6em;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .h5p-course-presentation .h5p-progressbar li {
